Sale Page: Add to Cart This allows the store attendant to add a product to cart(Sale it) [Delivers #161097736]

--- a/UI/view_products.html
+++ b/UI/view_products.html
@@ -41,7 +41,7 @@
                         <label class="product-desc">Hi-Tech LD24DSMJDD1</label>
                         <label class="product-desc">Ush 390000</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
                 <div class="img">
@@ -49,7 +49,7 @@
                         <label class="product-desc">Saachi NL-LED-32 DVB-TZ-DC</label>
                         <label class="product-desc">Ush 590000</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
                 <div class="img">
@@ -57,7 +57,7 @@
                         <label class="product-desc">Saachi NL-LED-24 DVB-TZ-DC</label>
                         <label class="product-desc">Ush 390000</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
                 <div class="img">
@@ -65,7 +65,7 @@
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
                         <label class="product-desc">Ush 4"1800</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
                 <div class="img">
@@ -73,7 +73,7 @@
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
                         <label class="product-desc">Ush 4"1800</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                         <label class="product-desc">Hi-Tech LD24DSMJDD1</label>
                         <label class="product-desc">Ush 390000</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
                 <div class="img">
@@ -91,7 +91,7 @@
                         <label class="product-desc">Saachi NL-LED-32 DVB-TZ-DC</label>
                         <label class="product-desc">Ush 590000</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
                 <div class="img">
@@ -99,7 +99,7 @@
                         <label class="product-desc">Saachi NL-LED-24 DVB-TZ-DC</label>
                         <label class="product-desc">Ush 390000</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
                 <div class="img">
@@ -107,7 +107,7 @@
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
                         <label class="product-desc">Ush 4"1800</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
                 <div class="img">
@@ -115,7 +115,7 @@
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
                         <label class="product-desc">Ush 4"1800</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
-                        <button class="product-btn sale-btn">Sale</button>
+                        <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
                 </div>
             </div>
