--- a/UI/sale.html
+++ b/UI/sale.html
@@ -39,11 +39,11 @@
                     <img src="images/tv1.jpg" alt="Product details" class="product-img">
                 </div>
                 <div class="narrow col2">
-                    <p class="details-lab"><label class="label-details">Model :</label> Hi-Tech LD24DSMJDD1</p>
-                    <p class="details-lab"><label class="label-details">Price :</label> Ush 390,000</p>
-                    <p class="details-lab"><label class="label-details">Quantity available :</label> 20</p>
-                    <p class="details-lab"><label class="label-details">Minimum Quantity Alowed :</label> 2</p>
-                    <label class="label-details details-lab" for="category">Category :</label><input name="category" type="text" value="Televisions" class="details-lab details-box">
+                    <p class="details-lab">Hi-Tech LD24DSMJDD1</p>
+                    <p class="details-lab">
+                        </label> Ush 390,000</p>
+                    <label class="sale-lab" for="category">Quantity </label><input name="category" type="number" min="1" max="20" value="1" class="details-lab details-box sale-box">
+                    <button class="add-cart">Add to Cart</button>
                 </div>
             </div>
         </div>
