--- a/UI/view_products.html
+++ b/UI/view_products.html
@@ -63,7 +63,7 @@
                 <div class="img">
                     <a href="details.html"><img src="images/tv4.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
-                        <label class="product-desc">Ush 4"1800</label></a>
+                        <label class="product-desc">Ush 418000</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
                         <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
@@ -71,7 +71,7 @@
                 <div class="img">
                     <a href="details.html"><img src="images/tv9.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
-                        <label class="product-desc">Ush 4"1800</label></a>
+                        <label class="product-desc">Ush 418000</label></a>
                     <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
                         <a href="sale.html"><button class="product-btn sale-btn">Sale</button></a>
                     </div>
