Add admin_sales_records.html, admin_signup.html, admin-add-product.html This adds the  admin's functionalities [Delivers #161113009 #161112384 #161112806 #161113255]

--- a/UI/admin_sales_records.html
+++ b/UI/admin_sales_records.html
@@ -13,7 +13,7 @@
 <body>
     <div class="content-wrap content">
         <div class="col-narrow navigation">
-            <a href="sales_records.html">
+            <a href="admin_sales_records.html">
                 <div class="profile-img-label">
                     <img src="images/profile.jpg" alt="Profile Picture" width="30px" height="30px" class="profile-img">
                     <div class="user-name">
@@ -23,16 +23,18 @@
             </a>
             <label class="categories">Categories</label>
             <hr />
-            <a href="view_products.html"><button class="btn">> Televisions <label class="item-num">(103)</label> </button></a>
-            <a href="view_products.html"><button class="btn">> Cameras <label class="item-num">(23)</label></button></a>
-            <a href="view_products.html"><button class="btn">> Musical Instruments <label class="item-num">(43)</label></button></a>
-            <a href="view_products.html"><button class="btn">> Decoders <label class="item-num">(78)</label> </button></a>
-            <a href="view_products.html"><button class="btn">> Audio & Video</Video> <label class="item-num">(34)</label></button></a>
-            <a href="view_products.html"><button class="btn">> DVD Players <label class="item-num">(6)</label></button></a>
+            <a href="admin_view_products.html"><button class="btn">> Televisions <label class="item-num">(103)</label> </button></a>
+            <a href="admin_view_products.html"><button class="btn">> Cameras <label class="item-num">(23)</label></button></a>
+            <a href="admin_view_products.html"><button class="btn">> Musical Instruments <label class="item-num">(43)</label></button></a>
+            <a href="admin_view_products.html"><button class="btn">> Decoders <label class="item-num">(78)</label> </button></a>
+            <a href="admin_view_products.html"><button class="btn">> Audio & Video</Video> <label class="item-num">(34)</label></button></a>
+            <a href="admin_view_products.html"><button class="btn">> DVD Players <label class="item-num">(6)</label></button></a>
         </div>
         <div class="col-wide main-content">
             <div class="Category">
-                <label>Profile &emsp;</label>
+                <label class="ad-category">Profile &emsp;</label>
+                <a href="admin-add-product.html"><button class="ad-add-product-btn">Add Product</button></a>
+                <a href="admin_signup.html"><button class="ad-add-product-btn">Create Attendant</button></a>
             </div>
             <div class="products">
                 <div class="img-sales">
