--- a/UI/admin-product-details.html
+++ b/UI/admin-product-details.html
@@ -13,7 +13,7 @@
 <body>
     <div class="content-wrap content">
         <div class="col-narrow navigation">
-            <a href="profile.html">
+            <a href="admin_sales_records.html">
                 <div class="profile-img-label">
                     <img src="images/profile.jpg" alt="Profile Picture" width="30px" height="30px" class="profile-img">
                     <div class="user-name">
@@ -23,12 +23,12 @@
             </a>
             <label class="categories">Categories</label>
             <hr />
-            <a href="view_products.html"><button class="btn">> Televisions <label class="item-num">(103)</label> </button></a>
-            <a href="view_products.html"><button class="btn">> Cameras <label class="item-num">(23)</label></button></a>
-            <a href="view_products.html"><button class="btn">> Musical Instruments <label class="item-num">(43)</label></button></a>
-            <a href="view_products.html"><button class="btn">> Decoders <label class="item-num">(78)</label> </button></a>
-            <a href="view_products.html"><button class="btn">> Audio & Video</Video> <label class="item-num">(34)</label></button></a>
-            <a href="view_products.html"><button class="btn">> DVD Players <label class="item-num">(6)</label></button></a>
+            <a href="admin_view_products.html"><button class="btn">> Televisions <label class="item-num">(103)</label> </button></a>
+            <a href="admin_view_products.html"><button class="btn">> Cameras <label class="item-num">(23)</label></button></a>
+            <a href="admin_view_products.html"><button class="btn">> Musical Instruments <label class="item-num">(43)</label></button></a>
+            <a href="admin_view_products.html"><button class="btn">> Decoders <label class="item-num">(78)</label> </button></a>
+            <a href="admin_view_products.html"><button class="btn">> Audio & Video</Video> <label class="item-num">(34)</label></button></a>
+            <a href="admin_view_products.html"><button class="btn">> DVD Players <label class="item-num">(6)</label></button></a>
         </div>
         <div class="col-wide main-content">
             <div class="Category">
