--- a/UI/admin_view_products.html
+++ b/UI/admin_view_products.html
@@ -13,7 +13,7 @@
 <body>
     <div class="content-wrap content">
         <div class="col-narrow navigation">
-            <a href="profile.html">
+            <a href="admin_sales_records.html">
                 <div class="profile-img-label">
                     <img src="images/profile.jpg" alt="Profile Picture" width="30px" height="30px" class="profile-img">
                     <div class="user-name">
@@ -33,8 +33,8 @@
         <div class="col-wide main-content">
             <div class="Category">
                 <label class="ad-category">Televisions &emsp;</label>
-                <a><button class="ad-add-product-btn">Add Product</button></a>
-                <a><button class="ad-add-product-btn">Create Attendant</button></a>
+                <a href="admin-add-product.html"><button class="ad-add-product-btn">Add Product</button></a>
+                <a href="admin_signup.html"><button class="ad-add-product-btn">Create Attendant</button></a>
             </div>
             <div class="products">
                 <div class="img">
