--- a/UI/sale.html
+++ b/UI/sale.html
@@ -13,7 +13,7 @@
 <body>
     <div class="content-wrap content">
         <div class="col-narrow navigation">
-            <a href="profile.html">
+            <a href="sales_records.html">
                 <div class="profile-img-label">
                     <img src="images/profile.jpg" alt="Profile Picture" width="30px" height="30px" class="profile-img">
                     <div class="user-name">
