Fixing The attendant's pages

--- a/UI/admin_view_products.html
+++ b/UI/admin_view_products.html
@@ -41,35 +41,35 @@
                     <a href="admin-product-details.html"><img src="images/tv1.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Hi-Tech LD24DSMJDD1</label>
                         <label class="product-desc">Ush 390000</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
                 <div class="img">
                     <a href="admin-product-details.html"><img src="images/tv2.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Saachi NL-LED-32 DVB-TZ-DC</label>
                         <label class="product-desc">Ush 590000</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
                 <div class="img">
                     <a href="admin-product-details.html"><img src="images/tv3.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Saachi NL-LED-24 DVB-TZ-DC</label>
                         <label class="product-desc">Ush 390000</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
                 <div class="img">
                     <a href="admin-product-details.html"><img src="images/tv4.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
                         <label class="product-desc">Ush 418000</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
                 <div class="img">
                     <a href="admin-product-details.html"><img src="images/tv9.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
                         <label class="product-desc">Ush 418000</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
             </div>
@@ -78,35 +78,35 @@
                     <a href="admin-product-details.html"><img src="images/tv5.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Hi-Tech LD24DSMJDD1</label>
                         <label class="product-desc">Ush 390000</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
                 <div class="img">
                     <a href="admin-product-details.html"><img src="images/tv6.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Saachi NL-LED-32 DVB-TZ-DC</label>
                         <label class="product-desc">Ush 590000</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
                 <div class="img">
                     <a href="admin-product-details.html"><img src="images/tv7.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Saachi NL-LED-24 DVB-TZ-DC</label>
                         <label class="product-desc">Ush 390000</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
                 <div class="img">
                     <a href="admin-product-details.html"><img src="images/tv8.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
                         <label class="product-desc">Ush 4"1800</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
                 <div class="img">
                     <a href="admin-product-details.html"><img src="images/tv10.jpg" alt="Television" width="180px" height="180px">
                         <label class="product-desc">Ailipu 26 Inch 9826 LED TV</label>
                         <label class="product-desc">Ush 4"1800</label></a>
-                    <div class="sale-div"><a href="details.html"><button class="product-btn details-btn">View Details</button></a>
+                    <div class="sale-div"><a href="admin-product-details.html"><button class="product-btn details-btn">View Details</button></a>
                     </div>
                 </div>
             </div>
