--- a/UI/sale.html
+++ b/UI/sale.html
@@ -43,7 +43,7 @@
                     <p class="details-lab">
                         </label> Ush 390,000</p>
                     <label class="sale-lab" for="category">Quantity </label><input name="category" type="number" min="1" max="20" value="1" class="details-lab details-box sale-box">
-                    <a href="sales_records.html"><button class="add-cart">Add to Cart</button>
+                    <a href="sales_records.html"><button class="add-cart" onclick="add()">Add to Cart</button>
                 </div>
             </div>
         </div>
