--- a/UI/admin_signup.html
+++ b/UI/admin_signup.html
@@ -14,13 +14,13 @@
         <div class="form">
             <h2 class="login-label">Create a new Attendant</h2>
             <form action="admin_sales_records.html" method="GET" class="sign">
-                <fieldset></fieldset>
-                <label for="name">Name</label>
-                <input type="text" name="name" placeholder="Attendant's Name" class="login-input" required>
-                <label for="email">Email</label>
-                <input type="email" name="email" placeholder="e.g attendant@store.com" class="login-input" required>
-                <label for="password">Password</label>
-                <input type="password" placeholder="Attendant's Password" name="password" class="login-input" required>
+                <fieldset>
+                    <label for="name">Name</label>
+                    <input type="text" name="name" placeholder="Attendant's Name" class="login-input" required>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" placeholder="e.g attendant@store.com" class="login-input" required>
+                    <label for="password">Password</label>
+                    <input type="password" placeholder="Attendant's Password" name="password" class="login-input" required>
                 </fieldset>
                 <input type="submit" name="submit" value="Submit" class="submit-btn">
             </form>
