--- a/UI/index.html
+++ b/UI/index.html
@@ -14,7 +14,7 @@
     <section>
         <div class="form">
             <h2 class="login-label">Login</h2>
-            <form action="admin_view_products.html" method="POST" class="sign" onsubmit="return validate();">
+            <form action="admin_view_products.html" method="GET" class="sign" onsubmit="return validate();">
                 <fieldset>
                     <label for="email">Email</label>
                     <input id="email" type="email" name="email" placeholder="e.g eubule@store.com" class="login-input" required>
